--- a/cloudfunctions-aliyun/login/package.json
+++ b/cloudfunctions-aliyun/login/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "uni-id": "file:../common/uni-id"
+  }
 }
