--- a/cloudfunctions-aliyun/common/uni-id/config.json
+++ b/cloudfunctions-aliyun/common/uni-id/config.json
@@ -1,6 +1,6 @@
 {
-    "passwordSecret": "passwordvegetablepark", 
-    "tokenSecret": "passwordtoken",
+    "passwordSecret": "vegetablepark", 
+    "tokenSecret": "vegetablepark",
     "tokenExpiresIn": 7200,
     "tokenExpiresThreshold": 600, 
     "bindTokenToDevice": true,
