--- a/cloudfunctions-aliyun/myRouter/package.json
+++ b/cloudfunctions-aliyun/myRouter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-by-weixin",
+  "name": "myRouter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "uni-cloud-router": "file:../common/uni-cloud-router",
     "uni-id": "file:../common/uni-id"
   }
 }
